crates/octl-cli/tests/snapshots/envelope_snapshots__skill_list_json.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
assertion_line: 233
expression: value
---
{
  "schema_version": 1,
  "data": {
    "skills": [
      {
        "name": "orchestratectl-overview",
        "description": "First read for any agent that has just discovered the `orchestratectl` binary mid-conversation. Teaches the overall shape of the tool — runs, supervisors, nodes, discussions, spinoffs — and the canonical create→supervise→collect-reports cycle. Use when asked \"what is orchestratectl\", when the binary appears in a session for the first time, or before issuing the first non-trivial command."
      },
      {
        "name": "octl-run-overview",
        "description": "Read the output of `orchestratectl run list` and `orchestratectl run show` to inspect the state of orchestrated agent workflows (worktrees, fan-outs, spinoffs). Use when asked about run status, when triaging an in-flight orchestration, or before deciding whether to spawn, resume, or abort work."
      },
      {
        "name": "octl-spawn-spinoff",
        "description": "Spawn an autonomous spinoff worktree via orchestratectl — a single fire-and-forget agent that takes a focused task, executes it in its own git worktree, and merges itself back. Use when the user wants a parallel sub-task handled without interactive review."
      },
      {
        "name": "worktree-spinoff",
        "description": "Spawn an autonomous spinoff worktree agent via `orchestratectl run create --kind spinoff` — one fire-and-forget agent that takes a focused task, executes it in its own git worktree, and merges itself back to the source branch. Use when the user says `/worktree-spinoff <task>`, when a parallel sub-task can be handled without interactive review, or when a driver (`/fan-out`, `/orchestrate`) needs to spawn one autonomous unit. NOT for interactive review (`/worktree-code`), N identical units (`/fan-out`), or dependency-ordered features (`/orchestrate`)."
      },
      {
        "name": "worktree-code",
        "description": "Spawn an INTERACTIVE coding agent in its own git worktree via `orchestratectl run create --kind code` — human-reviewed parallel work where the user finalizes the merge with `/worktree-merge`. Use when the user says `/worktree-code <task>`, `/worktree <task>` (router picks this for review-oriented work), invokes with an `issuectl` slug, or asks to \"spawn a worktree to do X\" without saying \"spinoff\", \"research\", or another variant. NOT for autonomous fire-and-forget (`/worktree-spinoff`), N identical units (`/fan-out`), dependency-ordered features (`/orchestrate`), research (`/worktree-research`), ADRs (`/worktree-technical-decision`), or skill authoring (`/worktree-make-skill`)."
      },
      {
        "name": "worktree-orchestrated",
        "description": "Spawn ONE autonomous worktree agent via `orchestratectl run create --kind orchestrated --parent-run-id <id> --parent-node-id <id>` as a child unit of an `/orchestrate` DAG. The child implements one feature with its own best-judgment decisions, reviews itself, merges into a shared integration branch, and submits a structured terminal `node report` (success, discuss items + chosen path, spin-off candidates, wrap-up recommendations) the parent supervisor consumes. NOT a user-facing slash command — invoked by `/orchestrate`. For identical independent units use `/worktree-spinoff`; for interactive human-reviewed work use `/worktree-code`."
      },
      {
        "name": "worktree-research",
        "description": "Spawn an autonomous research worktree via `orchestratectl run create --kind research` — multi-source background investigation that reads sources, gathers divergent perspectives, and writes a sourced markdown report committed to the repo, then merges itself back. Use when the user asks to research, investigate, survey, look into, or compare options for a topic that needs reading multiple sources and synthesizing into a sourced markdown report. Do NOT use for quick factual lookups (one `WebSearch`), single-doc summaries, debugging, code changes, or forward decisions (`/worktree-technical-decision`)."
      },
      {
        "name": "worktree-make-skill",
        "description": "Spawn an autonomous worktree via `orchestratectl run create --kind make-skill` to author a SUBSTANTIAL new Claude Code skill with multi-round LLM review, then self-merge. Use when the skill is substantial — composes other skills via `/<name>` calls, will be used in high-fan-out workflows, or needs a multi-round review pass before landing. For one-shot small skills use `/skill-creator` inline; for reviewing an existing skill use `/llm-skill-review`."
      },
      {
        "name": "worktree-bugfix",
        "description": "End-to-end bug investigation worktree. First creates an `issuectl` issue from the bug report on the current branch (committed before the worktree spawns), then spawns an autonomous worktree via `orchestratectl run create --kind bugfix` that investigates, classifies the fix as light vs. complex, runs the appropriate review skill, and merges itself back if no user input is required. Use when a teammate reports a bug or unexpected behavior and you want the whole investigate→fix→review→merge cycle handled in one go."
      },
      {
        "name": "worktree-technical-decision",
        "description": "Spawn an autonomous worktree via `orchestratectl run create --kind technical-decision` to drive ONE architectural / technical decision to a recorded ADR and self-merge. Use when the user says \"decide whether we should use X or Y\", \"make the architectural call on Z\", \"settle the trade-off between A and B\", or links an issue tagged decision/architecture. Do NOT use for opinions (`/llm-consult`), design ideation (`/llm-workshop`), plan review (`/llm-panel`), survey/research (`/worktree-research`), or archaeology (\"why did we choose X\" — historical, not a forward decision)."
      },
      {
        "name": "fan-out",
        "description": "Fan out N≥5 similar, fully independent units of work as parallel autonomous worktrees via `orchestratectl run create --kind fan-out` (top-level driver) plus one `--kind fan-out` child per unit (parent-pointed). Each child commits a disjoint output file inside the current git repo and merges itself back. Manages enumeration, concurrency (default 10), manifest-tracked state, and resume. Requires a git repo with a clean source branch. NOT for generic parallel commands, dependent workflows, shared-file edits, or tasks needing per-unit human review. For heterogeneous dependency-ordered features (a DAG rather than identical units), use `/orchestrate` instead."
      }
    ]
  }
}
