crates/octl-cli/tests/snapshots/envelope_snapshots__spinoff_list_text.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
p-0001	pending	n-0001	spinoff	seed proposal
