crates/octl-cli/tests/snapshots/envelope_snapshots__spinoff_reject_json.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
expression: value
---
{
  "schema_version": 1,
  "data": {
    "run_id": "[RUN_ID]",
    "proposal_id": "s-0001000001",
    "reason": "not now",
    "seq": 4
  }
}
