crates/octl-cli/tests/snapshots/envelope_snapshots__version_jsonl.snap
---
source: crates/octl-cli/tests/envelope_snapshots.rs
assertion_line: 233
expression: value
---
{"schema_version":1,"data":{"version":"0.1.0","commit":"[COMMIT]","skills":[{"name":"orchestratectl-overview","cli_version":"0.1.0","schema_version":1},{"name":"octl-run-overview","cli_version":"0.1.0","schema_version":1},{"name":"octl-spawn-spinoff","cli_version":"0.1.0","schema_version":1},{"name":"worktree-spinoff","cli_version":"0.1.0","schema_version":1},{"name":"worktree-code","cli_version":"0.1.0","schema_version":1},{"name":"worktree-merge","cli_version":"0.1.0","schema_version":1},{"name":"worktree-orchestrated","cli_version":"0.1.0","schema_version":1},{"name":"worktree-research","cli_version":"0.1.0","schema_version":1},{"name":"worktree-make-skill","cli_version":"0.1.0","schema_version":1},{"name":"worktree-bugfix","cli_version":"0.1.0","schema_version":1},{"name":"worktree-technical-decision","cli_version":"0.1.0","schema_version":1},{"name":"worktree-bug-analysis","cli_version":"0.1.0","schema_version":1},{"name":"worktree","cli_version":"0.1.0","schema_version":1},{"name":"worktree-status","cli_version":"0.1.0","schema_version":1},{"name":"stint","cli_version":"0.1.0","schema_version":1},{"name":"fan-out","cli_version":"0.1.0","schema_version":1},{"name":"orchestrate","cli_version":"0.1.0","schema_version":1}],"schema_version":1,"supported_schemas":[1],"state_schema_version":1,"supported_state_schemas":[1]},"warnings":[]}
